--- a/app/src/main/res/layout/fragment_symbol_details.xml
+++ b/app/src/main/res/layout/fragment_symbol_details.xml
@@ -12,9 +12,11 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
+            app:contentScrim="?colorPrimary">
 
-            <View
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/chartView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_collapseMode="parallax"/>
