--- a/app/src/main/res/layout/view_holder_symbol.xml
+++ b/app/src/main/res/layout/view_holder_symbol.xml
@@ -5,35 +5,33 @@
     android:layout_marginBottom="6dp"
     android:background="@drawable/view_holder_symbol_background"
     android:elevation="2dp"
-    android:orientation="horizontal"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/symbolTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:textColor="?android:textColorPrimary"
         android:textSize="16sp"
-        android:ems="6"/>
+        android:ems="5"/>
 
     <TextView
         android:id="@+id/symbolPriceTextView"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_gravity="center"
+        android:ems="6"
         android:textColor="?android:textColorPrimary"
-        android:textSize="16sp"
-        />
+        android:textSize="16sp" />
 
-    <TextView
+    <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chartView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:textColor="?android:textColorPrimary"
         android:textSize="16sp"
         android:textAlignment="center"
